# texpackr

./: .gitignore  .gitmodules  Android.mk  LICENSE  Makefile  Makefile.am  README.md  configure.ac
include/: texpackr.h  texpackr_lib.h
include/texpackr/: internal.h  log.h  meta.h  png_util.h  sprite.h  texpackr.h  types.h
src/: cli.c  lib.c  meta.c  png_util.c  png_util.h  sprite.c  texpackr.c  texpackr.h  texpackr_cli.c  texpackr_lib.c  texpackr_log.h  texpackr_meta.c  texpackr_meta.h  treetrv.c  types.h
test/: .gitignore  test-readfrommem.c  test.c  test_common.h  test_main.c  test_readfrommem.c  texpackr_test.c
